# python-examples

./: .gitignore  README.md  pyproject.toml
python_examples/: binary_node_tree.py  binary_node_tree_original.py  deep_test.py  dev.json  test.json  train.json  wakeword.ipynb
