[tool.poetry]
name = "python-examples"
version = "0.1.0"
description = ""
authors = ["jonra1993 <jon_ra@hotmail.es>"]

[tool.poetry.scripts]
binary_node_tree = "python_examples.binary_node_tree:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
deepspeech = "^0.9.3"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
